2011-05-20  Ulrich Drepper  <drepper@gmail.com>

	[BZ #11869]
	* sysdeps/posix/getaddrinfo.c (gaih_inet): Don't unconditionally use
	alloca.
	* include/alloca.h (extend_alloca_account): Define.

	[BZ #11857]
	* posix/regex.h: Fix comments with documentation of user-accessible
	fields after compilation and describe correct free'ing of pattern
	after re_compile_pattern.
	Patch by Reuben Thomas <rrt@sc3d.org>.

2011-05-18  Ryan S. Arnold  <rsa@us.ibm.com>

	* sysdeps/powerpc/powerpc64/Makefile (no-special-regs): Add -mno-vsx
	and -mno-altivec to prevent the compiler from using Altivec and/or
	VSX instructions when the corresponding registers are not available.

2011-05-19  Andreas Schwab  <schwab@redhat.com>

	* grp/compat-initgroups.c (__libc_use_alloca): Don't define.

2011-05-19  Ulrich Drepper  <drepper@gmail.com>

	* libio/freopen.c (freopen): Use __dup2, not dup2.
	* libio/freopen64.c (freopen64): Likewise.

2011-05-17  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #12775]
	* sysdeps/x86_64/fpu/e_powl.S: Fix a typo.
	* math/Makefile (tests): Add test-powl.
	(CFLAGS-test-powl.c): Define.
	* math/test-powl.c: New file.

2011-05-16  H.J. Lu  <hongjiu.lu@intel.com>

	* fileops.c (_IO_new_file_fopen): Get fd from _IO_fileno.

2011-05-17  Ulrich Drepper  <drepper@gmail.com>

	[BZ #11837]
	* iconvdata/gb18030.c: Update to GB18020-2005.

2011-05-16  Ulrich Drepper  <drepper@gmail.com>

	* posix/regex.h (RE_SYNTAX_AWK, RE_SYNTAX_GNU_AWK,
	RE_SYNTAX_POSIX_AWK): Update to match recent development.
	Patch by Aharon Robbins <arnold@skeeve.com>.

	[BZ #11892]
	* stdlib/putenv.c (putenv): Don't always create copy of the variable
	on the stack.

	[BZ #11895]
	* misc/pselect.c (__pselect): Handle timeout value errors hidden
	through underflows.

	[BZ #12766]
	* misc/error.c (error_at_line): Ensure file_name and old_file_name
	point to strings before performing equality test for error_one_per_line
	mode.

	[BZ #11697]
	* login/programs/pt_chown.c (do_pt_chown): Always call chown.
